--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 16
       - name: Install Dependencies
-        run: npm install
+        run: npm install;  npm install -g @vscode/vsce
       
       - name: Package Extension
         run: npx vsce package
